Tue Aug 26 20:46:55 2014  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_time_unmagnify_to_float): Avoid double rounding.
	  Reported by Tsuyoshi Sawada.
	  https://bugs.ruby-lang.org/issues/10135#note-1

Tue Aug 26 17:12:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_close): ignore only "closed stream" IOError and
	  NoMethodError, do not swallow other exceptions at the end of
	  block.  [ruby-core:64463] [Bug #10153]

Tue Aug 26 13:46:33 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* template/fake.rb.in: fix failed to make install when srcdir !=
	  builddir.

Tue Aug 26 13:43:50 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_range.rb: added workaround for VERBOSE message.

Tue Aug 26 12:38:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_mathn.rb: added workaround for VERBOSE messages.

Tue Aug 26 11:44:04 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/shell/process-controller.rb: removed commented-out code.

Tue Aug 26 11:39:01 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/thwait.rb (ThreadsWait): removed needless constant.

Tue Aug 26 09:27:10 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/mathn.rb: mathn library is deprecated on ruby 2.2.
	  [Feature #10169][ruby-core:64553]

Tue Aug 26 09:25:03 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/mathn.rb: removed commented-out code.

Mon Aug 25 20:15:50 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(fole_s_connect, fole_initialize): raise a
	  security error with the tainted string object.
	* ext/win32ole/win32ole_event.c(ev_advise): ditto.
	* test/win32ole/test_win32ole.rb(test_s_new_exc_svr_tainted,
	  test_s_new_exc_host_tainted): ditto.
	* test/win32ole/test_win32ole_event.rb(test_s_new_exc_tainted): ditto.

Mon Aug 25 12:56:54 2014  Ivan Korunkov  <ivankorunkov@ya.ru>

	* lib/logger.rb (format_datetime): use "%6N" to show microsecond.
	  [Fix GH-704]
